--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@prisma/client": "^4.2.1",
     "js-cookie": "^3.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -22,6 +23,7 @@
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8"
   }
 }
