--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.2.1",
+    "axios": "^0.27.2",
     "js-cookie": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
     "next": "12.2.5",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.1"
